# vector-store

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: test_please_ignore.txt
.github/instructions/: rust.instructions.md
.github/workflows/: call_jira_status_in_progress.yml  cargo.yml  daily.yml  release.yaml  rust.yml  update_jira_status_in_progress.yml  update_jira_status_in_review.yml  update_jira_status_ready_for_merge.yml  validator.yml
api/: openapi.json
cluster_test/: README.md  cluster.yml  params.yml  remote_run.sh  test.py  upload.sh
cluster_test/common/: install-python.sh  installer.py
cluster_test/monitor/: install.sh  start-cmd.sh
cluster_test/scylla/: install.sh
cluster_test/vector/: install.sh
crates/benchmark/: Cargo.toml
crates/httpapi/: Cargo.toml
crates/httpapi/src/: lib.rs
crates/testclient/: Cargo.toml
crates/testclient/src/: lib.rs
crates/validator-engine/: Cargo.toml
docs/: benchmarking.md  releasing.md  replace-dead-node.md
scripts/: _build-release  _common.sh  _upload-release  build-dockers  build-release  make-aws-scylla-instance  make-aws-vs-instance  release  run-cqlsh-in-aws-cluster  run-nodetool-in-aws-cluster  run-scylla-in-aws-cluster  run-validator-with-scylla-docker  run-vs-in-aws-cluster  run-with-release-toolchain  upload-dockers  upload-release
src/: db.rs  db_index.rs  httproutes.rs  httpserver.rs  index.rs  lib.rs  main.rs  metrics.rs  modify_indexes.rs  monitor_indexes.rs  monitor_items.rs  rpcserver.rs
tests/: Dani_test.txt
vector-store-macros/: Cargo.toml
(+200 files in other folders)
