# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "httpapi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
macros.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
