# Copyright 2026-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "testclient"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
hotpath = ["hotpath/hotpath"]

[dependencies]
axum.workspace = true
axum-test.workspace = true
hotpath.workspace = true
vector-store.workspace = true
